package com.example.accountbookforme.model

import java.math.BigDecimal

data class Total(

    val id: Long,

    val name: String,

    val total: BigDecimal
)
